k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: refresh-health-service
  labels:
    app: refresh-health
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: refresh-health
```
